Changes in version 0.99.23
+ added two interaction tests, described in ?swish
+ incorporate qvalue package for pvalue, locfdr and qvalue
+ added plotMASwish() to facilitate plotting

Changes in version 0.99.0
+ fishpond getting ready for submission to Bioc